tests/toylang/neg/000931_mutation.toylang
program a = { if a if then sleep; } .
